react_webviews/src/dashboard/MyAccount/MyAccount.scss
.my-account {
  background-color: white;
  height: 100%;
  margin: -20px;

  .my-account-content {
    padding-bottom: 20px;
    background: #f1f1f1;

    .my-acct-details{
      padding: 20px;
      background-color: white;
      color: var(--dark);
      .my-acct-user-name{
        font-size: 15px;
        font-weight: 700;
        line-height: 24px;
        margin-bottom: 10px;
      }
      .my-acct-user-auth{
        font-weight: 500;
        margin-bottom: 5px;
        font-size: 13px;
        line-height: 21px;
      }
      .my-acct-user-details{
        color: var(--steelgrey);
        margin-bottom: 5px;
      }

      .my-acct-tag{
        color: var(--secondary-green);
        background-color: white;
        float: right;
        margin-right: 15px;
        font-size: 12px;
        font-weight: 700;
        line-height: 15px;
        cursor: pointer;
      }

      .my-acct-verified-tag{
        background-color: var(--secondary-green);
        color: white;
        border-radius: 100px;
        height: 16px;
        font-size: 10px;
        font-weight: 500;
        width: 70px;
        text-align: center;
        padding: 1px;
      }
    }

    .account {
      background-color: white;

      .account-head-title {
        padding: 20px 10px 10px 20px;
        font-weight: 600;
        color: var(--gunmetal);
        font-size: 16px;
      }

      .ma-kir-title {
        font-size: 10px;
        letter-spacing: 1px;
        padding-top: 0;
      }

      .my-account-investment-card {
        display: flex;
        align-items: center;
        padding: 0 20px 20px 20px;

        .maic-content {
          margin-right: 30px;
          min-width: 120px;
          display: flex;
          flex-direction: column;
          align-items: flex-start;

          .maic-title {
            color: var(--gunmetal);
            line-height: 21px;
            font-size: 13px;
            font-weight: 500;
          }

          .maic-title-disable {
            color: var(--steelgrey);
          }

          .maic-subtitle {
            color: var(--steelgrey);
            line-height: 8px;
            font-size: 8px;
          }
        }
      }

      .account-options {
        border-bottom: none;
        padding: 15px 15px 15px 20px;
        font-size: 16px;
        cursor: pointer;
        display: flex;
        align-items: center;
        color: var(--default);
        // img {
        //   width: 25px;
        //   margin-right: 15px;
        // }
        .alert-icn {
          width: 30px !important;
          border: 1px solid red;
        }
        .my-imgc {
          width: 25px !important;
          min-height: 30px;
          margin-right: 15px !important;
          margin-top: -3px;
        }
        .pending {
          color: #d0021b;
        }
      }
    }
  }
}

.my-account-dialog {
  .content {
    padding: 15px;
    .subtitle {
      color: #333333;
    }
  }
  .action {
    padding: 5px 15px 15px 15px;
    .confirm {
      color: white;
      background-color: var(--secondary);
      font-weight: 400;
      font-size: 14px;
      min-width: 80px;
      padding: 5px 24px;
    }

    .cancel {
      color: var(--primary);
      background: transparent;
      border: none;
    }
  }
}

.investment-proof {
  color: #333333;
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-size: 16px;
  line-height: 1.5;
  border-bottom: 1px solid #d8d8d8;
  padding: 15px 0;

  .button {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4) !important;
    background-color: rgb(250, 250, 250) !important;
    font-weight: 400 !important;
    font-size: 14px !important;
  }

  .button:hover {
    background-color: rgb(250, 250, 250) !important;
  }
}

.investment-proof-dialog {
  line-height: 1.5;
  color: #333333;

  .action {
    display: flex;
    justify-content: flex-end;
    margin: 0;
    padding: 0 20px 20px 20px;

    .button {
      background-color: var(--secondary);
      color: white;
      padding: 10px 32px;
    }
  }
}

.blank-mandate-upload {
  color: #333333;
  line-height: 1.5;
  padding-bottom: 40px;

  header {
    font-size: 16px;
    margin-bottom: 10px;
  }

  .preview-container {
    width: 100%;
    background-color: rgb(247, 245, 245);
    text-align: center;
    padding: 20px 0;
  }

  .preview {
    display: block;
    width: 97%;
    height: 300px;
    margin: 0 auto;
  }

  .blank-mandate-doc-upload-container {
    margin-top: 20px;
    border: 1px dashed gray;
    background-color: #f7f5f5;
    padding: 20px 10px;

    .blank-mandate-upload-doc-actions {
      .blank-mandate-upload {
        display: none;
      }

      .blank-mandate-upload-button {
        display: block;
        margin: 0 auto;
        margin-top: 10px;
        background-color: transparent;
        padding: 0;
        border: none;
        cursor: pointer;

        img {
          width: 40px;
        }
      }

      .mobile-actions {
        display: flex;
        align-items: center;
        justify-content: space-evenly;
        font-size: 16px;
      }

      .upload-action {
        font-size: 16px;
        color: var(--secondary-green);
        margin-top: 4px;
      }
    }
  }
}

.blank-mandate-upload-dialog {
  line-height: 1.5;
  color: #333333;

  .content {
    min-width: 250px;
    font-size: 15px;
  }

  .action {
    display: flex;
    justify-content: flex-end;
    min-width: 250px;
    margin: -15px 0 0 0;
    padding: 0 20px 10px 20px;

    .button {
      background-color: white;
      color: #878787;
      padding: 10px 32px;
    }

    .button:hover {
      background-color: rgba(158,158,158,0.2);
    }
  }
}

